# lang-project

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  diag.te  example.ayla  lang.config  main.cpp  tes.html  test.html  test.ts  test.txt
.cache/clangd/index/: AST.hpp.06A6D7EFB345034A.idx  AST.hpp.E53264A87663AA5B.idx  AliasTable.cpp.18FB033234CF0245.idx  AliasTable.cpp.3F0D686CDC3DF808.idx  AliasTable.hpp.553282EA306A19D7.idx  AliasTable.hpp.C91540FAF158B630.idx  Arena.hpp.8385C24D79ED71B0.idx  (+289 more)
examples/: Stream.hpp  test.orb  test.ts
lixo/: AssignmentObject.hpp  BinaryExpressionObject.hpp  CallFunctionObject.hpp  IdentifierHandler.hpp  Stream.hpp  StringHandler.hpp
lixo/plugins/: Handler.hpp  Solver.hpp
lixo/solvers/: AssignmentSolver.hpp  BinaryExpressionSolver.hpp  FloatSolver.hpp  FunctionCallSolver.hpp  IntSolver.hpp  StringSolver.hpp
oboslet/: AssignmentNode.hpp  Config.hpp  Environment.hpp  FunctionCallStructuralNode.hpp  LiteralNodeGenerator.hpp  NativeFunctionNode.hpp  OperatorNode.hpp  ParameterNode.hpp  Scope.cpp  Scope.hpp  StructuralAnalyzer.hpp  TypeHandler.hpp  VirtualFunctionNode.hpp  binary_expression_node.hpp
oboslet/errors/: EnvironmentError.hpp  ScopeErros.hpp  StreamErrors.hpp
obsolet/optimizer/: Optimizer.hpp
src/argon/: argon_descriptor.hpp  argon_main.cpp  argon_main.hpp
src/core/: AST.hpp  Arena.hpp  Ast.hpp  CompilationUnit.hpp  Context.hpp  Environment.hpp  Error.hpp  FileUnit.hpp  JsonWriter.hpp  LangData.hpp  Lexer.cpp  Lexer.hpp  Parser.hpp  Scope.cpp  Scope.hpp  Stack.cpp  Stack.hpp  Stream.hpp  TextStream.hpp  Token.hpp  TokenDescriptor.hpp  TokenStream.hpp  TransparentHash.hpp  ast.hpp
src/debug/: Color.hpp  Console.hpp  NodeDebug.hpp  TokenDebug.hpp
src/diagnostic/: Diagnostic.hpp  DiagnosticCode.hpp  DiagnosticEngine.cpp  DiagnosticEngine.hpp  diagnostic_code.hpp  diagnostic_context.hpp  diagnostic_debug.hpp  diagnostics_table.hpp  formatter.cpp  formatter.hpp
src/engine/: CompilationUnit.hpp  Engine.cpp  Engine.hpp  ExecutionUnit.hpp  compilation_unit_manager.hpp  engine.hpp  global_context.hpp  language_context.hpp
src/errors/: ScopeErros.hpp  StackErrors.hpp
src/examples/: test.orb
src/handlers/: HandlerBase.hpp  IdentifierHandler.hpp  KeywordHandler.hpp  NumberHandler.hpp  OperatorHandler.hpp  PunctuationHandler.hpp
src/helper/: TokenMatchHelper.hpp
src/interpleter/: test.cpp
src/language/: BuiltinScope.hpp  LanguageSpec.hpp  argon_main.hpp  module_console.hpp
src/lexer/: Lexer.hpp  plugin.hpp
src/node/: BoolLiteralNode.hpp  CallNode.hpp  FloatLiteralNode.hpp  IntLiteralNode.hpp  NativeFunctionNode.hpp  Nodes.hpp  StringLiteralNode.hpp
src/optimizer/: Optimizer.hpp
src/parser/: ExpressionParser.hpp  Node.hpp  Parser.hpp  ParserPlugin.hpp  VariableDeclarationPlugin.hpp
src/plugins/: AssignmentPlugin.hpp  CallPlugin.hpp
src/resolver/: Resolver.cpp  Resolver.hpp  resolve_identifier.hpp  resolve_type.hpp  resolve_variable_declaration.hpp  resolver_function_call.hpp
src/semantic/: validate_variable_declaration.hpp
src/tests/: example.ay  function_errors.ay  variable_errors.ay
src/utils/: Stream.hpp  TextLoader.hpp  Unicode.hpp  Utf8.hpp
(+344 files in other folders)
